# the_rust_book_code_by_wuzhenben

ch02/dicey_temperatures/dicey_temperatures_cpp/: CMakeLists.txt  CMakePresets.json
ch02/dicey_temperatures/dicey_temperatures_cpp/source/: main.cpp
ch02/dicey_temperatures/dicey_temperatures_cpp/test/: CMakeLists.txt
ch02/dicey_temperatures/dicey_temperatures_java/: settings.gradle.kts
ch02/dicey_temperatures/dicey_temperatures_java/app/: build.gradle.kts
ch02/dicey_temperatures/dicey_temperatures_java/app/src/main/java/com/wuzhenben/diceytemperatures/: App.java  GuessTheSum.java
ch02/dicey_temperatures/dicey_temperatures_java/app/src/test/java/com/wuzhenben/diceytemperatures/: AppTest.java  GuessTheSumTest.java
ch02/guess_the_number/: Cargo.toml
ch02/guess_the_number/src/: main.rs
ch03/functions/src/: main.rs
ch03/loops/src/: main.rs
ch03/variables/src/: main.rs
ch04/borrowing/src/: main.rs
ch04/cpp/no_strict_borrow_checks_during_compilation/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ch04/cpp/no_strict_borrow_checks_during_compilation/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ch04/cpp/no_strict_borrow_checks_during_compilation/source/: lib.cpp  main.cpp
ch04/cpp/no_strict_borrow_checks_during_compilation/test/: CMakeLists.txt
ch04/cpp/no_strict_borrow_checks_during_compilation/test/source/: no_strict_borrow_checks_during_compilation_test.cpp
ch04/cpp/out_of_bounds_array_access_may_lead_to_undefined_behavior/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ch04/cpp/out_of_bounds_array_access_may_lead_to_undefined_behavior/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ch04/cpp/out_of_bounds_array_access_may_lead_to_undefined_behavior/source/: lib.cpp  main.cpp
ch04/cpp/out_of_bounds_array_access_may_lead_to_undefined_behavior/test/: CMakeLists.txt
ch04/cpp/out_of_bounds_array_access_may_lead_to_undefined_behavior/test/source/: out_of_bounds_array_access_may_lead_to_undefined_behavior_test.cpp
ch04/cpp/raii/: CMakeLists.txt  CMakePresets.json  README.md
ch04/cpp/raii/cmake/: dev-mode.cmake  install-rules.cmake
ch04/cpp/raii/source/: main.cpp
ch04/cpp/raii/test/source/: raii_test.cpp
ch04/explicitly_handle_array_out_of_bounds_access_at_runtime/: Cargo.toml
ch04/explicitly_handle_array_out_of_bounds_access_at_runtime/src/: main.rs
ch04/move_a_variable/: Cargo.toml
ch04/move_a_variable/src/: main.rs
ch04/strict_borrow_checks_during_compilation/: Cargo.toml
ch04/strict_borrow_checks_during_compilation/src/: main.rs
ch04/variable_scope/src/: main.rs
ch04/zero_cost_abstractions/src/: main.rs
cpp/raii/: HACKING.md
cpp/raii/cmake/: variables.cmake
cpp/raii/source/: lib.cpp  main.cpp
cpp/raii/test/: CMakeLists.txt
rust_vs_cpp_code_showdown/exception_checking/exception_checking_cpp/: CMakePresets.json  HACKING.md  README.md
rust_vs_cpp_code_showdown/exception_checking/exception_checking_cpp/cmake/: dev-mode.cmake  install-rules.cmake
rust_vs_cpp_code_showdown/exception_checking/exception_checking_cpp/source/: lib.cpp  main.cpp
rust_vs_cpp_code_showdown/exception_checking/exception_checking_rust/: Cargo.toml  hello.txt
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_cpp/: CMakeLists.txt
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_cpp/cmake/: variables.cmake
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_cpp/source/: main.cpp
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_cpp/test/: CMakeLists.txt
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_cpp/test/source/: exception_checking_cpp_test.cpp
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_java/: build.gradle  settings.gradle
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_java/src/main/java/com/wuzhenben/exceptioncheckingjava/: ExceptioncheckingjavaApplication.java
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_java/src/main/resources/: application.properties
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_java/src/test/java/com/wuzhenben/exceptioncheckingjava/: ExceptioncheckingjavaApplicationTest.java  ExceptioncheckingjavaApplicationTests.java
rust_vs_cpp_vs_java_code_showdown/exception_checking/exception_checking_rust/src/: main.rs
